--- a/src/uni.scss
+++ b/src/uni.scss
@@ -14,6 +14,21 @@
 
 /* 颜色变量 */
 @import 'vk-uview-ui/theme.scss';
+
+$themeColor: #25cecb;
+$secondThemeColor: #25cecb;
+$mutedColor: #b9c1c9;
+$grayColor: #999999;
+$defaultTextColor: #333;
+$borderColor: #eee;
+$pageColor: #f8f8f8;
+$redColor: #f73131;
+$greenColor: #00cc62;
+$blueColor: #569ff1;
+$yellowColor: #f99b21;
+$placeholderColor: #bababa;
+$base-radius: 6px;
+
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
